--- a/app/src/main/res/layout/fragment_mine_share_to_relative_and_friend.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_relative_and_friend.xml
@@ -42,10 +42,42 @@
             android:textSize="14sp" />
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcy_mine_share_to_relative_and_friend_list"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcy_mine_share_to_relative_and_friend_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/ll_no_friend"
+            android:layout_marginTop="120dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/icon_no_friends"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/btn_add_relative_and_friend"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center_horizontal"
+                android:text="暂无亲友"
+                android:textSize="15sp"
+                android:textColor="#aaaaaa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
