--- a/app/src/main/res/layout/fragment_mine_share_to_friend_items.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend_items.xml
@@ -44,12 +44,13 @@
                 android:layout_height="wrap_content" />
         </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/iv_is_share_check"
+        <CheckBox
+            android:id="@+id/checkbox_is_share_check"
             android:layout_marginRight="15dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/icon_not_selected"
+            android:background="@drawable/share_to_friend_check_box_seclector"
+            android:button="@null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
