--- a/app/src/main/res/layout/fragment_mine_relativeandfriend_add_by_num.xml
+++ b/app/src/main/res/layout/fragment_mine_relativeandfriend_add_by_num.xml
@@ -91,10 +91,46 @@
             android:layout_height="match_parent">
 
             <ProgressBar
+                android:id="@+id/progress_loading"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginTop="3dp"
+                android:layout_centerInParent="true"
+                android:layout_below="@id/progress_loading"
+                android:id="@+id/tv_loading_text"
+                android:text="Loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/ll_no_friend"
+            android:layout_marginTop="120dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/icon_no_friends"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/btn_add_relative_and_friend"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center_horizontal"
+                android:text="无结果"
+                android:textSize="15sp"
+                android:textColor="#aaaaaa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </FrameLayout>
 
 </LinearLayout>
