--- a/app/src/main/res/layout/fragment_mine_personal_information_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_personal_information_mailbox.xml
@@ -22,6 +22,7 @@
             android:src="@drawable/icon_nav_back_white" />
 
         <TextView
+            android:id="@+id/tv_top_title"
             android:layout_marginBottom="12dp"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="48dp"
@@ -93,6 +94,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/btn_login_clear_text" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:visibility="invisible"
+        android:id="@+id/rl_send_pro_hint"
+        android:layout_marginTop="120dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ProgressBar
+            android:layout_centerHorizontal="true"
+            android:id="@+id/pro_share_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:textColor="@color/color_black"
+            android:text="load..."
+            android:layout_below="@id/pro_share_hint"
+            android:id="@+id/tv_share_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
