--- a/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
+++ b/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.cylan.photoview.PhotoView
         android:id="@+id/iv_userinfo_big_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
