增加语言包

--- a/app/src/main/res/layout/fragment_home_mine_bind_phone.xml
+++ b/app/src/main/res/layout/fragment_home_mine_bind_phone.xml
@@ -86,7 +86,7 @@
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:gravity="center"
-                        android:hint="@string/item_input_phone_num"
+                        android:hint="@string/PHONE_NUMBER_2"
                         android:inputType="numberDecimal"
                         android:maxLength="6"
                         android:paddingLeft="40dp"
