--- a/app/src/main/res/layout/gf_adapter_folder_list_item.xml
+++ b/app/src/main/res/layout/gf_adapter_folder_list_item.xml
@@ -43,7 +43,7 @@
             android:id="@+id/tv_folder_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/all_photo"
+            android:text="string/all_photo"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             />
