--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -35,21 +35,21 @@
                 android:checked="true"
                 android:drawableTop="@drawable/icon_bottom_clever_dog_selector"
                 android:paddingBottom="3dp"
-                android:text="@string/item_jf_dog" />
+                android:text="@string/app_name" />
 
             <RadioButton
                 android:id="@+id/btn_home_wonderful"
                 style="@style/home_bottom_radio_style"
                 android:drawableTop="@drawable/icon_bottom_wonderful_selector"
                 android:paddingBottom="3dp"
-                android:text="@string/item_wonder" />
+                android:text="@string/Tap2_TitleName" />
 
             <RadioButton
                 android:id="@+id/btn_home_mine"
                 style="@style/home_bottom_radio_style"
                 android:drawableTop="@drawable/icon_bottom_mine_selector"
                 android:paddingBottom="3dp"
-                android:text="@string/item_mine" />
+                android:text="@string/Tap3_TitleName" />
         </RadioGroup>
 
         <View
