--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -95,7 +95,7 @@
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:gravity="center"
-                        android:hint="@string/item_input_verification_code"
+                        android:hint="@string/ENTER_CODE"
                         android:inputType="numberDecimal"
                         android:maxLength="6"
                         android:paddingLeft="40dp"
