--- a/app/src/main/res/layout/gf_activity_photo_select.xml
+++ b/app/src/main/res/layout/gf_activity_photo_select.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/gallery"
+                android:text="@string/photo"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 />
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/waiting"
+            android:text="string/waiting"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             />
