--- a/app/src/main/res/layout/layout_dialog_low_battery.xml
+++ b/app/src/main/res/layout/layout_dialog_low_battery.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
-            android:text="@string/s_bell_low_battery_content"
+            android:text="@string/DOOR_LOW_BATTERY"
             android:textColor="@color/color_666666"
             android:textSize="15sp" />
 
