--- a/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
+++ b/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
@@ -1,11 +1,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cLayout_dialog_wifi_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
-    android:orientation="vertical"
-    tools:context="com.cylan.jiafeigou.n.view.bind.BindDeviceListFragment">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="24dp"
-            android:text="@string/item_select_wifi"
+            android:text="@string/choose_connect_wifi"
             android:textColor="@color/color_black"
             android:textSize="16sp" />
 
