通讯录分享

--- a/app/src/main/res/layout/fragment_home_mine_share_devices_dialog.xml
+++ b/app/src/main/res/layout/fragment_home_mine_share_devices_dialog.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_share_to_timeline"
         android:drawablePadding="25dp"
         android:gravity="center_vertical"
-        android:drawableLeft="@mipmap/ic_launcher"
+        android:drawableLeft="@drawable/icon_mine_friend"
         android:text="亲友"
         android:textSize="16sp"
         android:textColor="@color/color_black"
@@ -22,7 +22,7 @@
         android:layout_marginTop="22dp"
         android:drawablePadding="25dp"
         android:gravity="center_vertical"
-        android:drawableLeft="@mipmap/ic_launcher"
+        android:drawableLeft="@drawable/icon_setting_information"
         android:text="通讯录"
         android:textSize="16sp"
         android:textColor="@color/color_black"
