--- a/app/src/main/res/layout/fragment_mine_share_device_items.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device_items.xml
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/tv_has_share_num"
                 android:paddingTop="8dp"
                 android:layout_below="@id/tv_share_device_name"
                 android:textSize="12sp"
