--- a/app/src/main/res/layout/activity_mag_live.xml
+++ b/app/src/main/res/layout/activity_mag_live.xml
@@ -51,7 +51,7 @@
             android:src="@drawable/icon_setting" />
     </RelativeLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -64,5 +64,30 @@
             android:overScrollMode="never"
             android:scrollbars="none" />
 
-    </LinearLayout>
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/ll_no_mesg"
+            android:layout_marginTop="147dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/icon_no_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center_horizontal"
+                android:text="暂无消息"
+                android:textSize="15sp"
+                android:textColor="#aaaaaa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </FrameLayout>
+
 </LinearLayout>
