--- a/app/src/main/res/layout/fragment_msglive_message.xml
+++ b/app/src/main/res/layout/fragment_msglive_message.xml
@@ -154,5 +154,30 @@
             android:text="清空开关记录"
             android:textSize="16sp"
             android:textColor="@color/color_4b9fd5" />
+
+        <RelativeLayout
+            android:visibility="invisible"
+            android:id="@+id/rl_clear_pro_hint"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:layout_centerHorizontal="true"
+                android:id="@+id/pro_clear_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:textColor="@color/color_black"
+                android:text="loading..."
+                android:layout_below="@id/pro_clear_hint"
+                android:id="@+id/tv_send_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
     </LinearLayout>
+
 </LinearLayout>
