亲友头像修改

--- a/app/src/main/res/layout/activity_clip_image.xml
+++ b/app/src/main/res/layout/activity_clip_image.xml
@@ -16,7 +16,7 @@
         app:clipType="circle"         ： 裁剪框类型为圆形
         app:mHorizontalPadding="30dp" ：裁剪框距离左右边距为30dp
      -->
-    <com.cylan.jiafeigou.support.galleryfinal.widget.zoonview.ClipViewLayout
+    <com.cylan.jiafeigou.support.photoselect.ClipViewLayout
         android:id="@+id/clipViewLayout1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -26,7 +26,7 @@
         />
 
     <!--矩形裁剪框示例 -->
-    <com.cylan.jiafeigou.support.galleryfinal.widget.zoonview.ClipViewLayout
+    <com.cylan.jiafeigou.support.photoselect.ClipViewLayout
         android:id="@+id/clipViewLayout2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
