--- a/app/src/main/res/layout/activity_clip_image.xml
+++ b/app/src/main/res/layout/activity_clip_image.xml
@@ -16,26 +16,58 @@
         app:clipType="circle"         ： 裁剪框类型为圆形
         app:mHorizontalPadding="30dp" ：裁剪框距离左右边距为30dp
      -->
-    <com.cylan.jiafeigou.support.photoselect.ClipViewLayout
-        android:id="@+id/clipViewLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        app:clipBorderWidth="0dp"
-        app:clipType="circle"
-        />
 
-    <!--矩形裁剪框示例 -->
-    <com.cylan.jiafeigou.support.photoselect.ClipViewLayout
-        android:id="@+id/clipViewLayout2"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:clipBorderWidth="2dp"
-        app:clipType="rectangle"
-        app:mHorizontalPadding="30dp"
-        android:visibility="gone"
-        />
+        >
+        <com.cylan.jiafeigou.support.photoselect.ClipViewLayout
+            android:id="@+id/clipViewLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:clipBorderWidth="0dp"
+            app:clipType="circle"
+            />
+
+        <!--矩形裁剪框示例 -->
+        <com.cylan.jiafeigou.support.photoselect.ClipViewLayout
+            android:id="@+id/clipViewLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:clipBorderWidth="2dp"
+            app:clipType="rectangle"
+            app:mHorizontalPadding="30dp"
+            android:visibility="gone"
+            />
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/rl_send_pro_hint"
+            android:layout_marginTop="120dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:layout_centerHorizontal="true"
+                android:id="@+id/pro_send_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:textColor="@color/color_black"
+                android:text="loading..."
+                android:layout_below="@id/pro_send_hint"
+                android:id="@+id/tv_send_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+
+    </FrameLayout>
 
     <RelativeLayout
         android:id="@+id/bottom"
