--- a/app/src/main/res/layout/fragment_login_layout_login_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_login_box.xml
@@ -16,6 +16,7 @@
 
 
         <EditText
+            android:text="18503060168"
             android:id="@+id/et_login_username"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -65,6 +66,7 @@
         android:layout_marginTop="29dp">
 
         <EditText
+            android:text="111111"
             android:id="@+id/et_login_pwd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
