--- a/app/src/main/res/layout/fragment_mine_suggestion_server.xml
+++ b/app/src/main/res/layout/fragment_mine_suggestion_server.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginTop="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,7 +26,7 @@
         android:textColor="@color/color_333333"
         android:textSize="14sp"
         android:id="@+id/tv_mine_suggestion_server_speak"
-        android:paddingLeft="15dp"
+        android:paddingLeft="24dp"
         android:paddingRight="12dp"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
