--- a/app/src/main/res/layout/fragment_mine_suggestion_server.xml
+++ b/app/src/main/res/layout/fragment_mine_suggestion_server.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginTop="20dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_mine_suggestion_server_time"
@@ -26,12 +26,12 @@
         android:textColor="@color/color_333333"
         android:textSize="14sp"
         android:id="@+id/tv_mine_suggestion_server_speak"
-        android:paddingLeft="24dp"
-        android:paddingRight="12dp"
+        android:paddingLeft="14dp"
+        android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:text="亲爱的用户,客户端将进行系统维护升级,期间对设备正常使用将会造成一定影响，对您造成的不便之处敬请谅解。再次感谢您对加菲狗的支持！"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="3dp"
         android:layout_marginTop="30dp"
         android:layout_toRightOf="@id/iv_mine_suggestion_server"
         android:layout_width="230dp"
