--- a/app/src/main/res/layout/fragment_mag_facility_information.xml
+++ b/app/src/main/res/layout/fragment_mag_facility_information.xml
@@ -143,7 +143,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_card_state"
+                    android:id="@+id/tv_device_sdcard_state"
                     android:layout_marginTop="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -184,7 +184,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_net"
+                    android:id="@+id/tv_device_mobile_net"
                     android:layout_marginTop="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -215,7 +215,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_wifi_state"
+                    android:id="@+id/tv_device_wifi_state"
                     android:layout_marginTop="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -256,7 +256,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_cid_number"
+                    android:id="@+id/tv_device_cid"
                     android:layout_marginTop="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -377,7 +377,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_battery_leve"
+                    android:id="@+id/tv_device_battery_level"
                     android:layout_marginTop="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -408,7 +408,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_storage"
+                    android:id="@+id/tv_device_storage"
                     android:layout_marginTop="6dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
