--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -6,41 +6,41 @@
     android:orientation="vertical">
 
     <!-- 顶部栏 -->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="25dp"
-        android:background="#0BA8CF">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_information_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:padding="15dp"
-            android:src="@drawable/icon_nav_back_white" />
-
-        <TextView
+        <FrameLayout
+            android:id="@+id/fLayout_top_bar_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="48dp"
-            android:text="功能设置"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp" />
-    </RelativeLayout>
+            android:background="@color/color_0ba8cf">
+
+            <TextView
+                android:id="@+id/imgV_top_bar_center"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:drawableLeft="@drawable/icon_nav_back_white"
+                android:drawablePadding="15dp"
+                android:padding="15dp"
+                android:text="@string/EQUIPMENT_INFO"
+                android:textColor="@color/color_white"
+                android:textSize="16sp" />
+        </FrameLayout>
+    </LinearLayout>
 
     <ScrollView
-        android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white"
+        android:overScrollMode="never"
         android:scrollbars="none">
         <!-- “设置”相关模块 -->
         <!-- 设备名称 -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="设置"
+                android:text="@string/SETTINGS"
                 android:textColor="#4B9FD5"
                 android:textSize="14sp" />
 
@@ -63,16 +63,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="设备名称"
+                    android:text="@string/EQUIPMENT_NAME"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_name"
+                    android:id="@+id/tv_device_alias"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="客厅摄像头"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -96,16 +95,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="设备时区"
+                    android:text="@string/SETTING_TIMEZONE"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_time_zone"
+                    android:id="@+id/tv_device_time_zone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="北京/中国"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -136,16 +134,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="Micro SD卡"
+                    android:text="@string/SETTING_SD"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_card_state"
+                    android:id="@+id/tv_device_sdcard_state"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="读写失败"
+                    android:text="@string/SD_INIT_ERR"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -163,7 +161,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="网络"
+                android:text="@string/NETWORK"
                 android:textColor="#4B9FD5"
                 android:textSize="14sp" />
 
@@ -177,16 +175,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="移动网络"
+                    android:text="@string/NETWORK_1"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_net"
+                    android:id="@+id/tv_device_mobile_net"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="中国联通"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -208,12 +205,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="Wi-Fi"
+                    android:text="@string/device_Wi_Fi"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_wifi_state"
+                    android:id="@+id/tv_device_wifi_state"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
@@ -235,7 +232,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="信息"
+                android:text=""
                 android:textColor="#4B9FD5"
                 android:textSize="14sp" />
 
@@ -249,16 +246,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="CID编号"
+                    android:text="@string/Tap1_Setting_Cid"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_cid_number"
+                    android:id="@+id/tv_device_cid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="16位的字符串，设备首次激活时生成"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -280,15 +276,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="MAC"
+                    android:text="@string/MAC"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tv_device_mac"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="WiFi芯片写死的"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -310,15 +306,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="系统版本"
+                    android:text="@string/SYSTME_VERSION"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tv_device_system_version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="JFG1.2"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -340,15 +336,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="软件版本"
+                    android:text="@string/SOFTWARE_VERSION"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tv_device_soft_version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="2.4.6.696"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -370,16 +366,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="电池电量"
+                    android:text="@string/BATTERY_LEVEL"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_battery_leve"
+                    android:id="@+id/tv_device_battery_level"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="充电中 67%"
+                    android:text="@string/CHARGING"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
@@ -401,16 +397,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="储存空间"
+                    android:text="@string/VALID_STORAGE"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_information_facility_storage"
+                    android:id="@+id/tv_device_storage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="1.5GB可用"
                     android:textColor="#8C8C8C"
                     android:textSize="13sp" />
 
