设备信息页面

--- a/app/src/main/res/layout/fragment_mag_edit_name.xml
+++ b/app/src/main/res/layout/fragment_mag_edit_name.xml
@@ -36,7 +36,7 @@
         android:text="名称已存在"
         android:textSize="10sp"
         android:textColor="#F26B6B"
-        android:layout_alignTop="@+id/et_information_edit_name"
+        android:layout_alignTop="@+id/et_input_box"
         android:layout_alignLeft="@+id/tv_information_name"
         android:layout_alignStart="@+id/tv_information_name" />
 
