--- a/app/src/main/res/layout/layout_dialog_capture_period.xml
+++ b/app/src/main/res/layout/layout_dialog_capture_period.xml
@@ -19,6 +19,7 @@
             android:textSize="16sp" />
 
         <LinearLayout
+            android:id="@+id/lLayout_week"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
